--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "proyecto",
   "private": true,
+  "homepage": "http://emmanuelsjamesbgithub.io/jservis",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-page -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -11,6 +14,7 @@
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
