--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "proyecto",
   "private": true,
-  "homepage": "http://emmanuelsjamesbgithub.io/jservis",
+  "homepage": "httpS://emmanuelsjamesb.store",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-page -d build",
+    "predeploy": "npm run build && echo emmanuelsjamesb.store > ./build/CNAME",
+    "deploy": "gh-page -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
