--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "proyecto",
   "private": true,
-  "homepage": "https://emmanuelsjamesb.store",
+  "homepage": "https://github.com/emmanuelsjamesb/jservis base /jservis/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build && echo emmanuelsjamesb.store > ./dist/CNAME",
-    "deploy": "gh-page -d dist",
+    "predeploy": "npm run build && echo emmanuelsjamesb/jservis > ./dist/CNAME",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
