--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.14.0",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
     "tailwindcss-textshadow": "^2.1.3",
     "typewriter-effect": "^2.21.0"
   },
